@@ -1,5 +1,17 @@
 <html><body>
-If you don't like jEdit's widget appearance and would prefer the Java default,
-disable the "Plastic widget theme" in the <b>Appearance</b> pane of the
-<b>Utilities</b>&gt;<b>Global Options</b> dialog box.
+The <b>Utilities</b>&gt;<b>Evaluate For Selected Lines</b> command
+evaluates the specified BeanShell expression for each selected line,
+replacing the contents of that line with the return value of the
+expression.<p>
+
+For example, you can use this to add a line number to each selected
+line, by evaluating the following expression:<p>
+
+<code>(index+1) + " " + text</code><p>
+
+Or you can add a prefix and suffix to each selected line, with this
+expression:<p>
+
+<code>"&lt;listitem&gt;" + text + "&lt;/listitem&gt;"</code>
+
 </body></html>
